--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,9 @@ jobs:
       run: cd openwrt && ./scripts/feeds update -a
 
     - name: Install feeds
-      run: cd openwrt && ./scripts/feeds install -a
+      run: cd openwrt && git clone https://github.com/esirplayground/luci-app-poweroff && mv luci-app-poweroff /package/feeds/luci/luci-app-poweroff && ./scripts/feeds install -a
+      
+
 
     - name: Load custom configuration
       run: |
