--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,7 @@ jobs:
     - name: del dts
       run: |
            rm -f /openwrt/target/linux/rockchip/files/arch/arm64/boot/dts/rockchip/rk3568-opc-h68k.dts
-           cp ./rk3568-opc-h68k.dts /openwrt/target/linux/rockchip/files/arch/arm64/boot/dts/rockchip/rk3568-opc-h68k.dts
+           mv ./rk3568-opc-h68k.dts /openwrt/target/linux/rockchip/files/arch/arm64/boot/dts/rockchip/rk3568-opc-h68k.dts
 
     - name: Load custom configuration
       run: |
