--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,8 @@ jobs:
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
-        cd openwrt && git reset --hard 87f72815e8df96889c14565d4631235d72f8e30b && cd ..
+        # 回退旧版本
+        # cd openwrt && git reset --hard 87f72815e8df96889c14565d4631235d72f8e30b && cd ..
         
     - name: Load custom feeds
       run: |
@@ -82,7 +83,7 @@ jobs:
     - name: Clone poweroff
       run: |
            cd openwrt
-           git clone  https://github.com/esirplayground/luci-app-poweroff.git
+           git clone https://github.com/esirplayground/luci-app-poweroff.git
            mv luci-app-poweroff package/feeds/luci/luci-app-poweroff      
 
 
