--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,11 +87,11 @@ jobs:
            mv luci-app-poweroff package/feeds/luci/luci-app-poweroff      
 
 
-    - name: del dts
-      run: |
-           cd openwrt/target/linux/rockchip/files/arch/arm64/boot/dts/rockchip/
-           rm -f ./rk3568-opc-h68k.dts
-           wget https://github.com/leesonaa/OpenWrt_Build/blob/main/rk3568-opc-h68k.dts
+    #- name: del dts  fuck
+    #  run: |
+    #       cd openwrt/target/linux/rockchip/files/arch/arm64/boot/dts/rockchip/
+    #       rm -f ./rk3568-opc-h68k.dts
+    #       wget https://github.com/leesonaa/OpenWrt_Build/blob/main/rk3568-opc-h68k.dts
            
 
     - name: Load custom configuration
