--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
   build:
     name: Build OpenWrt
     runs-on: ubuntu-latest
-
+    timeout-minutes: 600
     steps:
     - name: Checkout
       uses: actions/checkout@main
