--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ env:
 jobs:
   build:
     name: Build OpenWrt Test
-    runs-on: bebian11
+    runs-on: Debian11
     timeout-minutes: 600
     steps:
     - name: Checkout
