--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,8 @@ env:
 
 jobs:
   build:
-    name: ubuntu-runners
-    runs-on: ubuntu-20.04-16core
+    name : ubuntu-runnersgroup
+    runs-on: ubuntu-latest-4core
     timeout-minutes: 600
     steps:
     - name: Checkout
