--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,6 +71,11 @@ jobs:
       run: |
         [ -e $FEEDS_CONF ] && cp $FEEDS_CONF openwrt/feeds.conf.default
 
+
+    - name : Show the feeds_conf_default
+      run: cd openwrt && cat feeds.conf.default
+
+
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
       
