--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,13 +67,12 @@ jobs:
         # 回退旧版本
         # cd openwrt && git reset --hard 87f72815e8df96889c14565d4631235d72f8e30b && cd ..
         
+    - name : Show the default feeds.conf.default
+      run: cd openwrt && cat feeds.conf.default
+
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && cp $FEEDS_CONF openwrt/feeds.conf.default
-
-
-    - name : Show the feeds_conf_default
-      run: cd openwrt && cat feeds.conf.default
 
 
     - name: Update feeds
