--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     timeout-minutes: 600
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
       
     - name: Init Env
       run : |
@@ -155,7 +155,7 @@ jobs:
     #    keep_minimum_runs: 9
 
     - name: Remove old Releases
-      uses: dev-drprasad/delete-older-releases@v0.1.0
+      uses: dev-drprasad/delete-older-releases@v3
       with:
         keep_latest: 9
         delete_tags: true
