--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,8 @@ jobs:
     timeout-minutes: 600
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
-      
+      uses: actions/checkout@main
+  
     - name: Init Env
       run : |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
@@ -155,7 +155,7 @@ jobs:
     #    keep_minimum_runs: 9
 
     - name: Remove old Releases
-      uses: dev-drprasad/delete-older-releases@v2
+      uses: dev-drprasad/delete-older-releases@v0.1.0
       with:
         keep_latest: 9
         delete_tags: true
