--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,8 +64,8 @@ jobs:
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
-        # 回退旧版本
-        # cd openwrt && git reset --hard 87f72815e8df96889c14565d4631235d72f8e30b && cd ..
+        [ -e 040-del-rss-log.patch ] && cp 040-del-rss-log.patch openwrt/package/lean/r8125/patches/040-del-rss-log.patch
+      
         
     - name : Show the default feeds.conf.default
       run: cd openwrt && cat feeds.conf.default
