--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ on:
 
 env:
   REPO_URL: https://github.com/DHDAXCW/lede-rockchip.git
-  REPO_BRANCH: master
+  REPO_BRANCH: stable
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_SHELL: diy.sh
