--- a/h68k.config
+++ b/h68k.config
@@ -1901,8 +1901,8 @@ CONFIG_PACKAGE_autosamba=y
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl6000g2b is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl6050 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl7260 is not set
-# CONFIG_PACKAGE_iwlwifi-firmware-iwl7265 is not set
-# CONFIG_PACKAGE_iwlwifi-firmware-iwl7265d is not set
+CONFIG_PACKAGE_iwlwifi-firmware-iwl7265=y
+CONFIG_PACKAGE_iwlwifi-firmware-iwl7265d=y
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl8260c is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl8265 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl9000 is not set
@@ -2856,7 +2856,7 @@ CONFIG_PACKAGE_kmod-cfg80211=y
 # CONFIG_PACKAGE_kmod-iwl-legacy is not set
 # CONFIG_PACKAGE_kmod-iwl3945 is not set
 # CONFIG_PACKAGE_kmod-iwl4965 is not set
-# CONFIG_PACKAGE_kmod-iwlwifi is not set
+CONFIG_PACKAGE_kmod-iwlwifi=y
 # CONFIG_PACKAGE_kmod-lib80211 is not set
 # CONFIG_PACKAGE_kmod-libertas-sdio is not set
 # CONFIG_PACKAGE_kmod-libertas-spi is not set
