--- a/.github/workflows/h68k.yml
+++ b/.github/workflows/h68k.yml
@@ -15,7 +15,8 @@ name: Build OpenWrt-H68K
 
 on:
   schedule:
-    - cron: '0 0 1/2 * *'
+    - cron: '0 16 1,15 * *'
+    #每个月的1号和15号的UTC时间4点即中国时间夜里12点编译一次
   repository_dispatch:
   workflow_dispatch:
 
