--- a/.github/workflows/h68k.yml
+++ b/.github/workflows/h68k.yml
@@ -23,7 +23,7 @@ on:
 
 env:
   REPO_URL: https://github.com/DHDAXCW/lede-rockchip
-  REPO_BRANCH: master
+  REPO_BRANCH: stable
   FEEDS_CONF: h68k.feeds.conf.default
   CONFIG_FILE: h68k.config
   DIY_SHELL: h68k-diy.sh
