--- a/.github/workflows/h68k.yml
+++ b/.github/workflows/h68k.yml
@@ -77,6 +77,7 @@ jobs:
       run: |
           cd openwrt
           sed -i 's/5.4/6.0/g' ./target/linux/rockchip/Makefile
+          rm -rf target/linux/rockchip/patches-6.0/021-v6.2-net-phy-add-Motorcomm-YT8531S-phy-id.patch 108-net-phy-Add-driver-for-Motorcomm-yt8531-gigabit.patch
           rm -rf package/kernel/mac80211 && rm -rf package/kernel/rtl8821cu
           svn export https://github.com/coolsnowwolf/lede/trunk/package/kernel/mac80211 package/kernel/mac80211
           # 打开 hinlink_opc-h68k 
