--- a/.github/workflows/h68k.yml
+++ b/.github/workflows/h68k.yml
@@ -22,8 +22,8 @@ on:
 
 
 env:
-  REPO_URL: https://github.com/DHDAXCW/lede-rockchip
-  REPO_BRANCH: stable
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: master
   FEEDS_CONF: h68k.feeds.conf.default
   CONFIG_FILE: h68k.config
   DIY_SHELL: h68k-diy.sh
